[project]
name = "explanation-quality-recsys-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7.9"
dependencies = [
    "cycler==0.10.0",
    "easydict==1.9",
    "ipykernel>=6.16.2",
    "kiwisolver==1.3.1",
    "matplotlib==3.4.2",
    "numpy==1.21.1",
    "pandas==1.3.0",
    "pillow==8.3.1",
    "pyparsing==2.4.7",
    "python-dateutil==2.8.2",
    "pytz==2021.1",
    "scipy==1.7.0",
    "seaborn>=0.12.2",
    "six==1.16.0",
    "torch==1.9.0",
    "tqdm==4.61.2",
    "typing-extensions==3.10.0.0",
]
